mlflow/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: kubeflow
  labels:
    app: mlflow
spec:
  ports:
  - port: 5000
    targetPort: 5000
    name: http
  selector:
    app: mlflow
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-nginx-service
  namespace: kubeflow
  labels:
    app: mlflow
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 31321
    name: http-nginx
  selector:
    app: mlflow
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: mlflow
  namespace: kubeflow
spec:
  gateways:
    - kubeflow-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /mlflow
      rewrite:
        uri: /
      route:
        - destination:
            host: mlflow
            port:
              number: 5000
---
