mlflow/istio-auth.yaml
kind: AuthorizationPolicy
apiVersion: security.istio.io/v1beta1
metadata:
  name: mlflow-service
  namespace: kubeflow
spec:
  action: ALLOW
  rules:
    - {}
  selector:
    matchLabels:
      app: mlflow
